# edge-python

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  add-bell-backspace-form-vtab-escapes.txt  add-edge-pdk-prelude.txt  add-pdk-module-bootstrap-macro.txt  add-wasm-free-export.txt  bugs.json  build.rs  centralize-nanbox-constants.txt  centralize-src-buffer-read.txt  collapse-push-macro-into-s.txt  deterministic-fx-hasher-seed.txt  distinguish-overflow-from-type-miss.txt  export-pdk-abi-version.txt  fix-host-edge-encode-doc.txt  fix-plugin-fn-macro-error-message.txt  fix-raw-string-prefix-detection.txt  gate-templates-on-immutable-args.txt  generalize-int-overflow-message.txt  handle-len-via-raii.txt  hide-pdk-internals-submodule.txt  mark-val-from-raw-unsafe.txt  move-utils-to-util-mod.txt  package-lock.json  preallocate-gc-worklist.txt  remove-cosmetic-package-aliases.txt  remove-ffi-boundary-panics.txt  remove-unreachable-dispatch-arms.txt  rename-macros-to-edge-pdk-macros.txt  replace-fmtbuf-with-string.txt  rust-toolchain.toml  stash-panic-before-trap.txt  tighten-resolver-internals.txt  validate-utf8-on-host-input.txt  workspace-dependencies-table.txt
.cargo/: config.toml
.github/: README.md
.github/workflows/: README.md  _check.yml  _cli.yml  _demo.yml  _deploy.yml  _lint.yml  _native.yml  _runtime.yml  _runtime_check.yml  _test.yml  _wasm.yml  cli.yml  docs.yml  fuzzer.yml  host.yml  main.yml  pipeline.yml  std.yml
cli/: Cargo.toml  README.md  install.sh
cli/setup/: install.sh  uninstall.sh
cli/src/: build.rs  engine.rs  harness.html  init.rs  main.rs  pkg.rs  repl.rs  serve.rs  ui.rs  uninstall.rs
cli/src/templates/: dist.html  harness.html  scaffold.html
cli/tests/: cli.json  cli.rs
compiler/: Cargo.toml  README.md  build.rs
compiler/.cargo/: config.toml
compiler/fuzz-afl/: Cargo.toml  Dockerfile  compose.yml  deploy.sh  dict.txt  seeds.sh
compiler/fuzz-afl/src/: main.rs
compiler/src/: abi.rs  bridge.rs  lib.rs  main.rs  wasm.rs
compiler/src/main/: abi_bridge.rs  errors.rs  exports.rs  mod.rs  resolver.rs
compiler/src/modules/: fstr.rs  fx.rs  sha256.rs
compiler/src/modules/lexer/: mod.rs  scan.rs  tables.rs
compiler/src/modules/parser/: control.rs  expr.rs  imports.rs  literals.rs  mod.rs  stmt.rs  types.rs
compiler/src/modules/vm/: builtins.rs  cache.rs  dispatch.rs  gc.rs  helpers.rs  init.rs  mod.rs  ops.rs  optimizer.rs  types.rs
compiler/src/modules/vm/builtins/: async_ops.rs  attr.rs  bytes_helpers.rs  container.rs  conversion.rs  identity.rs  index.rs  io.rs  mod.rs  numeric.rs  sequence.rs
compiler/src/modules/vm/handlers/: arith.rs  data.rs  dunder.rs  format.rs  function.rs  methods.rs  methods_helpers.rs  mod.rs
compiler/src/modules/vm/handlers/builtin_methods/: bytes.rs  dict.rs  list.rs  mod.rs  numeric.rs  prelude.rs  set.rs  string.rs
compiler/src/modules/vm/types/: coro.rs  eq.rs  err.rs  math.rs  mod.rs  scheduler.rs
compiler/src/util/: fstr.rs  fx.rs  sha256.rs
compiler/tests/: common.rs  integrity.rs  lexer.rs  loaders.rs  main.rs  packages.rs  parser.rs  sha256.rs  vm.rs
compiler/tests/cases/: lexer.json  packages.json  parser.json  vm.json
demo/: README.md  _headers  edge.js  example.py  format.py  index.html  main.js  style.css  tailwind.config.js  version.json  worker.js
demo/css/: style.css
demo/js/: edge.js  main.js  worker.js
demo/runtime/: perceptron.py
docs/: README.md  docs.json  globals.css  mdx-components.js  next.config.js  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  theme.config.jsx
docs/app/: layout.jsx
docs/components/: Playground.jsx  editor.js  runtime.js  shiki.js
docs/getting-started/: quickstart.md  what-it-is.md
docs/implementation/: design.md  syntax.md
docs/language/: control-flow.md  functions.md
docs/lib/: remark-playground.mjs
docs/pages/: _app.jsx  _document.jsx  _meta.js
docs/public/: _redirects  robots.txt
docs/reference/: builtins.md  imports.md  limits-and-errors.md  packages.md  wasm-abi.md  writing-modules.md
docs/scripts/: sitemap.mjs
documentation/: docs.json  style.css
documentation/getting-started/: quickstart.md  what-it-is.md
documentation/implementation/: design.md  lexical.md  syntax.md
documentation/language/: async.md  classes.md  control-flow.md  data-types.md  dunders.md  functions.md  syntax.md
documentation/reference/: builtins.md  imports.md  limits-and-errors.md  methods.md  packages.md  wasm-abi.md  writing-modules.md
dom/: Cargo.toml  README.md  build.rs  dom.json
dom/src/: animations.js  bridge.js  events.js  forms.js  index.js  lib.rs  media.js  observers.js  platform.js  state.js  tree.js
dom/src/bridge/: animations.js  bridge.js  events.js  forms.js  media.js  observers.js  platform.js  state.js  style.js  tree.js
dom/tests/: dom.test.js
dom/web/: edge_python_dom.wasm  index.html  palette.py
edge-abi/: Cargo.toml
edge-abi/src/: lib.rs
edge-pdk/: Cargo.toml
edge-pdk/macros/: Cargo.toml
edge-pdk/macros/src/: lib.rs
edge-pdk/src/: lib.rs
edge-sdk/: Cargo.toml  README.md
edge-sdk/examples/: reference.rs
edge-sdk/src/: lib.rs
examples/slugify-mod/: Cargo.toml  script.py
host/: README.md
host/dom/: README.md
host/network/: README.md
host/tests/: README.md  (+1 more)
json/: Cargo.toml  README.md  json.json
math/: Cargo.toml  README.md
math/src/main/: batch.rs  mod.rs
network/: README.md  network.json
re/: README.md
runtime/: README.md  package.json
sandbox/: README.md  index.html  run.test.js
src/: bridge.js
starter-module/: Cargo.toml  script.py
std/: .gitignore  README.md
std/re/: Cargo.toml  README.md  re.json
std/re/src/: lib.rs
std/re/src/main/: ast.rs  mod.rs  parser.rs
storage/: README.md  storage.json
tests/: README.md  host.test.js  std.test.js
time/: README.md  time.json
wasm-abi/: Cargo.toml
wasm-pdk/: Cargo.toml
wasm-pdk/example/: Cargo.toml
wasm-pdk/example/src/: lib.rs
wasm-pdk/macros/: Cargo.toml
wasm-pdk/macros/src/: lib.rs
wasm-pdk/src/: lib.rs
web/: index.html  palette.py
(+152 files in other folders)
