[workspace]
members = ["compiler", "wasm-abi", "wasm-pdk", "wasm-pdk/macros", "starter-module"]
# `starter-module` is wasm-only: kept in `members` so it shares the lockfile and resolves path deps, but excluded from `default-members` so default workspace commands skip it. Build it explicitly with `-p starter-module --target wasm32-unknown-unknown`.
default-members = ["compiler", "wasm-abi", "wasm-pdk", "wasm-pdk/macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dylan-sutton-chavez/edge-python/"

# Single source for third-party versions. Members opt in with `dep = { workspace = true }` so a bump touches one line workspace-wide and the lockfile cannot grow accidental version splits.
[workspace.dependencies]
wasm-abi = { path = "wasm-abi" }
hashbrown = { version = "0.17", default-features = false }
itoa = "1"
lol_alloc = "0.4"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
