[package]
name = "edge-python-dom"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
test = false
doctest = false

[dependencies]
# Clone and build `compiler_lib.wasm` and save the repository in `~/.cargo/git/`.
edge-python = { git = "https://github.com/dylan-sutton-chavez/edge-python", branch = "main" }
