[package]
name = "edge-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Single-pass SSA compiler and threaded-code VM for a sandboxed Python subset. NaN-boxed values, dual inline caching, super-instruction fusion, pure-function memoization, mark-sweep GC; classes with inheritance and dunder protocol, async/await, pattern matching, and packages.json imports. around 170 KB WebAssembly module."
readme = "README.md"
autotests = false
autobins = false

[lib]
name = "compiler_lib"
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
edge-abi = { workspace = true }
hashbrown = { workspace = true }
itoa = { workspace = true }

# WASM-only global allocator. Pulled into wasm32 builds automatically; absent on host builds (where std's allocator is fine and `compiler.wasm` is just a library artifact, not the runtime target).
[target.'cfg(target_arch = "wasm32")'.dependencies]
lol_alloc = { workspace = true }

# Test-only deps for the JSON-driven test runner. None of these are pulled into the release `compiler.wasm`.
[dev-dependencies]
hashbrown = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
