[package]
name = "edge-python-dom"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "DOM capability for Edge Python: self-contained .wasm carrying its own JS bridge for browser DOM access."
repository = "https://github.com/dylan-sutton-chavez/edge-python-capabilities"
readme = "README.md"

[lib]
name = "edge_python_dom"
crate-type = ["cdylib"]
test = false
doctest = false
