[package]
name = "edge-pdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Edge Python Plugin Development Kit — the author-side runtime for writing native `.wasm` modules importable from Edge Python scripts. Provides `#[plugin_fn]` proc-macro, Handle/Value/Error types, and From/IntoValue traits over the v1 wasm-abi."

[lib]
crate-type = ["rlib"]

[dependencies]
macros = { path = "macros", version = "0.1.0" }
