[package]
name = "edge-pdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Edge Python Plugin Development Kit — the author-side runtime for writing native `.wasm` modules importable from Edge Python scripts. Provides `#[plugin_fn]` proc-macro, Handle/Value/Error types, and From/IntoValue traits over the v1 wasm-abi."

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
edge-abi = { workspace = true }
edge-pdk-macros = { path = "macros", version = "0.1.0" }

# Re-exported only so `edge_pdk::module!()` can refer to the symbol path.
# Plugin authors who skip the macro and declare their own #[global_allocator]
# do not pay for this — Rust drops unused crates from the cdylib.
[target.'cfg(target_arch = "wasm32")'.dependencies]
lol_alloc = "0.4"
