[package]
name = "edge-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SDK for writing Edge Python native modules. Provides the edge_export! macro that wraps a Rust function in the WASM ABI Edge Python's loader expects."

[lib]
name = "edge_sdk"
test = false
doctest = false

[[example]]
name = "reference"
crate-type = ["cdylib"]
