[package]
name = "math"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-pdk = { git = "https://github.com/dylan-sutton-chavez/edge-python", branch = "main" }
libm = "0.2"
linked_list_allocator = { version = "0.10", default-features = false }

# opt-level 3: this is a compute package, favour speed over the few KB of size.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
