[package]
name = "macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal proc-macro for the `edge` crate. NOT FOR DIRECT USE — `edge` re-exports the `#[edge]` attribute. This crate exists separately because Rust requires proc-macros to live in a crate with `proc-macro = true`; nesting it at `edge/macros` makes the parent-child relationship explicit."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
