[package]
name = "edge-pdk-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal proc-macro for the `edge-pdk` crate. NOT FOR DIRECT USE — `edge-pdk` re-exports the `#[plugin_fn]` attribute. This crate exists separately because Rust requires proc-macros to live in a crate with `proc-macro = true`; nesting it at `edge-pdk/macros` makes the parent-child relationship explicit."

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
